--- a/package.json
+++ b/package.json
@@ -40,23 +40,23 @@
     "@ngx-translate/http-loader": "^0.1.0",
     "async": "^2.6.0",
     "com-badrit-base64": "^0.2.0",
-    "com-sarriaroman-photoviewer": "^1.1.11",
-    "com.synconset.imagepicker": "~2.1.10",
+    "com-sarriaroman-photoviewer": "^1.1.18",
+    "com.synconset.imagepicker": "^2.1.10",
     "cordova-android": "^6.2.3",
     "cordova-ios": "^4.5.0",
     "cordova-plugin-compat": "^1.2.0",
-    "cordova-plugin-device": "^1.1.6",
-    "cordova-plugin-facebook4": "^1.7.4",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-facebook4": "^1.10.1",
     "cordova-plugin-fcm": "^2.1.2",
-    "cordova-plugin-file": "^4.3.3",
+    "cordova-plugin-file": "^5.0.0",
     "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filechooser": "^1.0.1",
-    "cordova-plugin-filepath": "^1.2.0",
+    "cordova-plugin-filepath": "^1.4.2",
     "cordova-plugin-network-information": "^2.0.1",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-statusbar": "^2.2.3",
-    "cordova-plugin-telerik-imagepicker": "^2.1.10",
-    "cordova-plugin-whitelist": "^1.3.2",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-telerik-imagepicker": "git+https://github.com/Telerik-Verified-Plugins/ImagePicker.git",
+    "cordova-plugin-whitelist": "^1.3.3",
     "cordova-plugin-youtube-video-player": "^1.0.6",
     "ionic-angular": "3.6.0",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -95,10 +95,10 @@
       "com.synconset.imagepicker": {
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "Select Image"
       },
-      "cordova-plugin-fcm": {}
+      "cordova-plugin-fcm": {},
+      "cordova-plugin-compat": {}
     },
     "platforms": [
-      "android",
       "ios"
     ]
   }
